data/forge_javadoc/1.7.10/processed/net_minecraft_enchantment_EnchantmentHelper.md
# EnchantmentHelper

**Inheritance:** java.lang.Object → net.minecraft.enchantment.EnchantmentHelper

## Class signature

```java
public class EnchantmentHelper extends java.lang.Object
```

## Constructors

- `EnchantmentHelper()`

## Methods

- `static ItemStack addRandomEnchantment(java.util.Random p_77504_0_, ItemStack p_77504_1_, int p_77504_2_)`
- `static java.util.List buildEnchantmentList(java.util.Random p_77513_0_, ItemStack p_77513_1_, int p_77513_2_)`
- `static int calcItemStackEnchantability(java.util.Random p_77514_0_, int p_77514_1_, int p_77514_2_, ItemStack p_77514_3_)`
- `static void func_151384_a(EntityLivingBase p_151384_0_, Entity p_151384_1_)`
- `static void func_151385_b(EntityLivingBase p_151385_0_, Entity p_151385_1_)`
- `static int func_151386_g(EntityLivingBase p_151386_0_)`
- `static int func_151387_h(EntityLivingBase p_151387_0_)`
- `static float func_152377_a(ItemStack p_152377_0_, EnumCreatureAttribute p_152377_1_)`
- `static ItemStack func_92099_a(Enchantment p_92099_0_, EntityLivingBase p_92099_1_)`
- `static boolean getAquaAffinityModifier(EntityLivingBase p_77510_0_)`
- `static int getEfficiencyModifier(EntityLivingBase p_77509_0_)`
- `static int getEnchantmentLevel(int p_77506_0_, ItemStack p_77506_1_)`
- `static int getEnchantmentModifierDamage(ItemStack [] p_77508_0_, DamageSource p_77508_1_)`
- `static float getEnchantmentModifierLiving(EntityLivingBase p_77512_0_, EntityLivingBase p_77512_1_)`
- `static java.util.Map getEnchantments(ItemStack p_82781_0_)`
- `static int getFireAspectModifier(EntityLivingBase p_90036_0_)`
- `static int getFortuneModifier(EntityLivingBase p_77517_0_)`
- `static int getKnockbackModifier(EntityLivingBase p_77507_0_, EntityLivingBase p_77507_1_)`
- `static int getLootingModifier(EntityLivingBase p_77519_0_)`
- `static int getMaxEnchantmentLevel(int p_77511_0_, ItemStack [] p_77511_1_)`
- `static int getRespiration(EntityLivingBase p_77501_0_)`
- `static boolean getSilkTouchModifier(EntityLivingBase p_77502_0_)`
- `static java.util.Map mapEnchantmentData(int p_77505_0_, ItemStack p_77505_1_)`
- `static void setEnchantments(java.util.Map p_82782_0_, ItemStack p_82782_1_)`